added langchain with openai

--- a/job-SAAS/jobs/templates/search.html
+++ b/job-SAAS/jobs/templates/search.html
@@ -6,6 +6,8 @@
     <title>Search</title>
 </head>
 <body>
-    
+    <form action = 'POST'>
+        { % csrf.token %}
+    </form>
 </body>
 </html>
